# deepwiki-mcp-server

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  build.sh  extension.toml  lefthook.yml  separation-plan.md
.config/: deny.toml  release.toml
.github/: WORKFLOW_UPDATES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quality.yml  release.yml
configuration/: default_settings.jsonc  installation_instructions.md
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs
crates/bridge/src/mcp_bridge/: auth.rs  client.rs  mod.rs  protocol.rs  server.rs
crates/extension/: Cargo.toml
crates/extension/configuration/: default_settings.jsonc  installation_instructions.md
crates/extension/src/: lib.rs  tests.rs
docs/: BUILD.md  DOCS.md  LEFTHOOK.md  handoff-prompt.md
scripts/: deepwiki-mcp-proxy.sh
src/: lib.rs  main.rs  mcp.rs  tests.rs
tests/: protocol.rs
