[package]
name = "deepwiki-mcp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-client = "0.6"
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
