[workspace]
members = ["crates/extension", "crates/bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Keshav Mishra <me@kmsh.dev>"]
repository = "https://github.com/keshav1998/deepwiki-mcp-server"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Enable pedantic clippy checks
pedantic = { level = "warn", priority = -1 }
# Specific lint configurations
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
