[package]
name = "deepwiki-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Keshav Mishra <me@kmsh.dev>"]
repository = "https://github.com/keshav1998/deepwiki-mcp-server"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
zed_extension_api = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

[workspace]
members = []
