[package]
name = "deepwiki-mcp-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DeepWiki MCP Bridge - HTTP to STDIO bridge for Zed context servers"
repository.workspace = true
license.workspace = true

[[bin]]
name = "deepwiki-mcp-bridge"
path = "src/main.rs"

[dependencies]
# Official Rust MCP SDK
rmcp = { version = "0.2.0", features = [
    "client",
    "server",
    "transport-io",
    "transport-streamable-http-client",
    "transport-sse-client",
    "auth",
    "reqwest",
] }

# Core dependencies (simplified - many provided by rmcp)
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Temporary dependencies for existing bridge code (to be removed)
thiserror = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
bytes = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []

[lints]
workspace = true
