[package]
name = "deepwiki-mcp-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DeepWiki MCP Proxy - Minimal proxy using official rust-sdk for Zed context servers"
repository.workspace = true
license.workspace = true

[[bin]]
name = "deepwiki-mcp-bridge"
path = "src/main.rs"

[dependencies]
# Official Rust MCP SDK - provides all MCP protocol functionality
rmcp = { version = "0.2.0", features = [
    "client",
    "transport-io",
    "transport-streamable-http-client",
    "transport-sse-client",
    "auth",
    "reqwest",
] }

# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []

[lints]
workspace = true
