[package]
name = "deepwiki-mcp-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Keshav Mishra <me@kmsh.dev>"]
description = "DeepWiki MCP Proxy - Minimal proxy using official rust-sdk for Zed context servers"
repository = "https://github.com/keshav1998/deepwiki-mcp-server"
license = "MIT"

[[bin]]
name = "deepwiki-mcp-bridge"
path = "src/main.rs"

[dependencies]
# Official Rust MCP SDK - provides all MCP protocol functionality
rmcp = { version = "0.2.0", features = [
    "client",
    "transport-io",
    "transport-streamable-http-client",
    "transport-sse-client",
    "auth",
    "reqwest",
] }

# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
