[package]
name = "deepwiki-mcp-server-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DeepWiki MCP Server Extension for Zed"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Zed Extension API
zed_extension_api = "0.6.0"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
test-support = []

[lints]
workspace = true
